# OOP_lab2

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md
.devcontainer/: devcontainer.json
include/: myarray.h  twelve.h
src/: main.cpp  myarray.cpp  twelve.cpp
tests/: CMakeLists.txt  twelve_test.cpp
